# cifar10-cnn-classifier

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  check_models.py  check_utils.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: inspect_dataset.py  visualize_samples.py
src/: __init__.py  api.py  app.py  config.py  dataset.py  evaluate.py  inference.py  predict.py  train.py  utils.py
src/models/: __init__.py  blocks.py  classifier.py  cnn.py  utils.py
tests/: __init__.py  test_api.py  test_dataset.py  test_training.py
